Изменение проверки, происходит проверка логов