@@ -2,6 +2,7 @@ package ru.vyatsu;
 
 import lombok.val;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.api.io.TempDir;
 import ru.vyatsu.fileconverter.Main;
 
@@ -9,33 +10,42 @@ import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.IOException;
 import java.io.PrintStream;
-import java.nio.charset.StandardCharsets;
+import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import org.springframework.boot.test.system.CapturedOutput;
+import org.springframework.boot.test.system.OutputCaptureExtension;
 
+@ExtendWith(OutputCaptureExtension.class)
 class MainTests {
 
     @Test
-    void testMainWithInsufficientArgs(@TempDir Path tempDir) throws IllegalArgumentException {
+    void testMainWithInsufficientArgs(CapturedOutput output) {
         val errContent = new ByteArrayOutputStream();
         System.setErr(new PrintStream(errContent));
         try {
-            assertThatThrownBy(() -> Main.main(new String[]{"data.json"}))
-                    .isInstanceOf(IllegalArgumentException.class)
-                    .hasMessageContaining("Необходимо указать два аргумента");
+            Main.main(new String[]{"data.json"});
+            // Проверка лога
+            assertThat(output).contains("Необходимо указать два аргумента");
         } finally {
             System.setErr(System.err);
         }
     }
+
     @Test
     void testMainWithCorrectArgs(@TempDir Path tempDir) throws IOException {
         val outputPath = tempDir.resolve("test.json").toString();
         val outputFile = new File(outputPath);
+        URL resourceUrl = getClass().getClassLoader().getResource("data.xml");
 
         try {
-            Main.main(new String[]{getClass().getClassLoader().getResource("data.xml").getPath(), outputPath});
+            if (resourceUrl != null) {
+                Main.main(new String[]{resourceUrl.getPath(), outputPath});
+            } else {
+                // Обработка ситуации, когда ресурс не найден
+                throw new RuntimeException("Ресурс не найден");
+            }
 
             assertThat(outputFile.exists()).as("Выходной файл не был создан.").isTrue();
         } finally {
@@ -47,35 +57,36 @@ class MainTests {
     }
 
     @Test
-    void testMainWithInvalidInputFile(@TempDir Path tempDir) throws IOException {
+    void testMainWithInvalidInputFile(CapturedOutput output) {
         val errContent = new ByteArrayOutputStream();
         System.setErr(new PrintStream(errContent));
 
         try {
-            assertThatThrownBy(() -> Main.main(new String[]{"FileIsNo.xml", "output.json"}))
-                    .isInstanceOf(RuntimeException.class)
-                    .hasMessageContaining("Файл не найден");
+            Main.main(new String[]{"FileIsNo.xml", "output.json"});
+            // Проверка лога
+            assertThat(output).contains("Файл не найден");
         } finally {
             System.setErr(System.err);
         }
     }
 
     @Test
-    void testMainWithConversionError(@TempDir Path tempDir) throws IOException {
+    void testMainWithConversionError(@TempDir Path tempDir, CapturedOutput output) throws IOException {
         val errContent = new ByteArrayOutputStream();
         System.setErr(new PrintStream(errContent));
 
         try {
             // Подготавливаем файл с некорректными данными
             val invalidXmlPath = tempDir.resolve("invalid_data.xml");
-            Files.write(invalidXmlPath, "invalid xml data".getBytes(StandardCharsets.UTF_8));
+            Files.writeString(invalidXmlPath, "invalid xml data");
 
-            assertThatThrownBy(() -> Main.main(new String[]{invalidXmlPath.toString(), "output.json"}))
-                    .isInstanceOf(RuntimeException.class)
-                    .hasMessageContaining("Ошибка при чтении xml файла");
+            Main.main(new String[]{invalidXmlPath.toString(), "output.json"});
 
+            // Проверка лога
+            assertThat(output).contains("Ошибка при чтении xml файла");
         } finally {
             System.setErr(System.err);
         }
     }
 }
+
